# doc2ru

./: .gitignore  LICENSE  Makefile  README.md  dvc_guide.md  file_router.txt  pyproject.toml  requirements.txt
data/: raw.dvc
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: README.md
src/: __init__.py  dataset.py  features.py  plots.py
src/modeling/: predict.py  train.py
telegram_bot/: REAME.md  config.py  lib.py  main.py  settings.py
telegram_bot/keyboards/: buttons.py
