[tool.poetry]
name = "doc2ru"
version = "0.1.0"
description = ""
authors = ["Makarov MV, Rozanov KA, Shipizyn GS, Nikita Venediktov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = "^1.24.13"
pdfplumber = "^0.11.4"
pykernel = "^0.1.6"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
dvc = "^3.56.0"
aiogram = "^3.15.0"
environs = "^11.2.1"
langchain = "^0.3.12"
langchain-community = "^0.3.12"
langchain-openai = "^0.2.12"
langgraph = "^0.2.59"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
